server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: backend
  template:
    metadata:
      labels:
        run: backend
    spec:
      containers:
      - image: mmmehulll/codebit_server
        name: backend
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mongodb
  template:
    metadata:
      labels:
        run: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-volume
          subPath: db
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: backend-pvc
