server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: backend
  name: backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: backend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mongodb
  name: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: mongodb
