server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: codebit-192-168-180-166.nip.io
    http:
      paths:
      - path: /api/*
        backend:
          serviceName: backend
          servicePort: 5000
      # - path: /bar
      #   backend:
      #     serviceName: service2
      #     servicePort: 8080
